Solved a Problem with the Tooltip misaligning

--- a/NewCompendium/src/main/webapp/css/main.css
+++ b/NewCompendium/src/main/webapp/css/main.css
@@ -359,7 +359,7 @@ button:focus {
 }
 
 .triangle-collapse {
-	
+
 }
 
 .triangle-lm-home {
@@ -406,7 +406,7 @@ button:focus {
 }
 
 .mid-label-triangle:hover {
-	
+
 }
 
 #sidebar-comp-btn-container {
@@ -440,7 +440,7 @@ button:focus {
 }
 
 #sidebar-linkedin-container {
-	
+
 }
 
 #sidebar-bg-container {
@@ -463,7 +463,7 @@ button:focus {
 }
 
 #sidebar-email-btn:hover {
-	
+
 }
 
 #sidebar-github-btn {
@@ -491,6 +491,7 @@ button:focus {
 	justify-content: center;
 	display: inline-block;
 	text-align: center;
+	vertical-align: middle;
 }
 
 .bot-icon-expand {
@@ -523,6 +524,7 @@ button:focus {
 	position: relative;
 	overflow: hidden;
 	transition: width .8s;
+	vertical-align: middle;
 }
 
 .tooltip-style {
@@ -538,11 +540,11 @@ button:focus {
 .bot-tooltip-expand {
 	/* width: 15.0rem; */
 	width: 22.25rem;
-	
+
 }
 
 .bot-tooltip-collapse {
-	width: 0; 
+	width: 0;
 }
 
 .bot-tooltip-collapse {
@@ -832,7 +834,7 @@ button:focus {
 }
 
 .project-tile-expand {
-	
+
 	background-size: cover;
 }
 
@@ -940,7 +942,7 @@ button:focus {
 
 .project-desc-container-expanded {
 	height: 38rem;
-    
+
 }
 
 .project-desc-border {
@@ -1411,7 +1413,7 @@ button:focus {
 	height: 100%;
 	width: 80%;
 	float: left;
-	
+
 }
 
 .comp-content-iframe {
